feat: 充币页面优化（差小金库H5支付），买充提卖0星触发充提指南

--- a/HYNewNest/Features(主代码)/WalletComponent/RechargeComponent/View/HYRechargeEditView.xib
+++ b/HYNewNest/Features(主代码)/WalletComponent/RechargeComponent/View/HYRechargeEditView.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -72,7 +72,7 @@
                         <constraint firstAttribute="width" constant="5" id="a8s-yh-NhJ"/>
                     </constraints>
                 </imageView>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7Jh-91-lEK">
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7Jh-91-lEK">
                     <rect key="frame" x="275" y="0.0" width="70" height="68"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="70" id="Sdd-Vr-5Y7"/>
@@ -116,6 +116,7 @@
                     </constraints>
                 </view>
             </subviews>
+            <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <constraints>
                 <constraint firstItem="Vn1-qc-Wec" firstAttribute="top" secondItem="cLg-ul-BjC" secondAttribute="bottom" constant="22" id="0X4-06-e6v"/>
                 <constraint firstItem="cLg-ul-BjC" firstAttribute="top" secondItem="7Jh-91-lEK" secondAttribute="bottom" id="6Lu-wb-6PI"/>
@@ -144,8 +145,7 @@
             <nil key="simulatedTopBarMetrics"/>
             <nil key="simulatedBottomBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
-            <point key="canvasLocation" x="-93" y="-5"/>
+            <point key="canvasLocation" x="127" y="46"/>
         </view>
     </objects>
     <resources>
