--- a/HYNewNest/Features(主代码)/WalletComponent/WithdrawComponent/Controller/HYWithdrawViewController.xib
+++ b/HYNewNest/Features(主代码)/WalletComponent/WithdrawComponent/Controller/HYWithdrawViewController.xib
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -14,6 +15,7 @@
                 <outlet property="tableView" destination="RxF-ga-guY" id="3Zw-aD-Kh8"/>
                 <outlet property="topView" destination="TJv-mn-le0" id="rqT-z4-5cV"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
+                <outlet property="withdrawBtnBtmConst" destination="qPo-gs-R0N" id="XJA-I0-tpS"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -23,21 +25,21 @@
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="TJv-mn-le0" customClass="HYXiMaTopView">
                     <rect key="frame" x="0.0" y="44" width="414" height="138.5"/>
-                    <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="138.5" id="100-hL-d4v"/>
                     </constraints>
                 </view>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="RxF-ga-guY">
-                    <rect key="frame" x="0.0" y="188.5" width="414" height="585.5"/>
-                    <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                    <rect key="frame" x="0.0" y="188.5" width="414" height="430.5"/>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     <connections>
                         <outlet property="dataSource" destination="-1" id="O9r-N8-YYt"/>
                         <outlet property="delegate" destination="-1" id="7GV-re-5o0"/>
                     </connections>
                 </tableView>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="az0-7H-f0l" customClass="CNTwoStatusBtn">
-                    <rect key="frame" x="15" y="794" width="384" height="48"/>
+                    <rect key="frame" x="15" y="639" width="384" height="48"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="48" id="x9g-PL-2Ti"/>
                     </constraints>
@@ -53,7 +55,8 @@
                     </connections>
                 </button>
             </subviews>
-            <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+            <viewLayoutGuide key="safeArea" id="Q5M-cg-NOt"/>
+            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
                 <constraint firstItem="TJv-mn-le0" firstAttribute="top" secondItem="Q5M-cg-NOt" secondAttribute="top" id="Bms-LJ-jC6"/>
                 <constraint firstItem="RxF-ga-guY" firstAttribute="top" secondItem="TJv-mn-le0" secondAttribute="bottom" constant="6" id="Ndn-h9-gWH"/>
@@ -62,12 +65,16 @@
                 <constraint firstItem="Q5M-cg-NOt" firstAttribute="trailing" secondItem="RxF-ga-guY" secondAttribute="trailing" id="cb4-Rj-ZpE"/>
                 <constraint firstItem="az0-7H-f0l" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="15" id="eQY-1v-ZiQ"/>
                 <constraint firstItem="Q5M-cg-NOt" firstAttribute="trailing" secondItem="az0-7H-f0l" secondAttribute="trailing" constant="15" id="lIe-8V-0FF"/>
+                <constraint firstItem="Q5M-cg-NOt" firstAttribute="bottom" secondItem="az0-7H-f0l" secondAttribute="bottom" constant="175" id="qPo-gs-R0N"/>
                 <constraint firstItem="TJv-mn-le0" firstAttribute="trailing" secondItem="Q5M-cg-NOt" secondAttribute="trailing" id="vHy-4C-dcG"/>
-                <constraint firstItem="Q5M-cg-NOt" firstAttribute="bottom" secondItem="RxF-ga-guY" secondAttribute="bottom" constant="88" id="vlA-VP-3U2"/>
                 <constraint firstItem="RxF-ga-guY" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" id="ylB-ZC-8FU"/>
             </constraints>
-            <viewLayoutGuide key="safeArea" id="Q5M-cg-NOt"/>
             <point key="canvasLocation" x="139" y="113"/>
         </view>
     </objects>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
