--- a/HYNewNest/Features(主代码)/HomeComponent/View/CNUserInfoLoginView.xib
+++ b/HYNewNest/Features(主代码)/HomeComponent/View/CNUserInfoLoginView.xib
@@ -137,7 +137,7 @@
                             </constraints>
                             <fontDescription key="fontDescription" type="system" pointSize="15"/>
                             <inset key="titleEdgeInsets" minX="10" minY="0.0" maxX="0.0" maxY="0.0"/>
-                            <state key="normal" title="充值" image="充币">
+                            <state key="normal" title="充值" image="充值">
                                 <color key="titleColor" white="1" alpha="0.60147015670000004" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </state>
                             <connections>
@@ -181,7 +181,7 @@
                             </constraints>
                             <fontDescription key="fontDescription" type="system" pointSize="15"/>
                             <inset key="titleEdgeInsets" minX="10" minY="0.0" maxX="0.0" maxY="0.0"/>
-                            <state key="normal" title="提现" image="提币">
+                            <state key="normal" title="提现" image="提现">
                                 <color key="titleColor" white="1" alpha="0.60147015670000004" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </state>
                             <connections>
@@ -217,7 +217,7 @@
                             </constraints>
                             <fontDescription key="fontDescription" type="system" pointSize="15"/>
                             <inset key="titleEdgeInsets" minX="10" minY="0.0" maxX="0.0" maxY="0.0"/>
-                            <state key="normal" title="洗码">
+                            <state key="normal" title="洗码" image="洗码">
                                 <color key="titleColor" white="1" alpha="0.60147015670000004" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </state>
                             <connections>
@@ -359,8 +359,11 @@
         <image name="icon" width="42" height="42"/>
         <image name="vip1" width="42" height="18"/>
         <image name="买币" width="18" height="16"/>
+        <image name="充值" width="20" height="20"/>
         <image name="充币" width="20" height="21"/>
         <image name="卖币" width="18" height="17"/>
         <image name="提币" width="20" height="20"/>
+        <image name="提现" width="20" height="20"/>
+        <image name="洗码" width="20" height="20"/>
     </resources>
 </document>
